--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html lang="nl">
-<head>
-    <meta charset="utf-8 /">
-    <link rel="stylesheet" href="style.css" />
-    <script type="text/javascript" src="index.js"></script>
-</head>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
+        <script type="text/javascript" src="index.js"></script>
+    </head>
 <body>
-    
+    <div class="selectPlayers">
+        <div class="amountButton">2</div>
+        <div class="amountButton">3</div>
+        <div class="amountButton">4</div>
+    </div>
+    <div class="main">
+        <div class="ui">
+            <div class="roll"></div>
+            <div class="playerturn"></div>
+        </div>
+    <div class="board">
+        <div class="tile">1</div>
+    </div>
+    <div class="pawn pawn0"></div>
+    <div class="pawn pawn1"></div>
+    <div class="pawn pawn2"></div>
+    <div class="pawn pawn3"></div>
+    <div class="boardoverlay"></div>
+    </div>
+    <div class="winner"></div>
 </body>
 </html>
