--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     </head>
 <body onload="init()">
     <div class="selectPlayers">
-        <div class="amountButton">2</div>
-        <div class="amountButton">3</div>
-        <div class="amountButton">4</div>
+        <div class="amountButton" onclick='createPlayers(2)'>2</div>
+        <div class="amountButton" onclick='createPlayers(3)'>3</div>
+        <div class="amountButton" onclick='createPlayers(4)'>4</div>
     </div>
     <div class="main">
         <div class="ui">
-            <div class="roll"></div>
+            <div class="roll" onclick='game.roll(game.players[game.playerTurn])'></div>
             <div class="playerTurn"></div>
         </div>
     <div class="board">
